--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <ol class="goals__list">
                 <li class="goals__list--item">Master REACT and nodeJs to a very scary level</li>
                 <li class="goals__list--item">Contribute to open-source projects on a consequent basis.</li>
-                <li class="goals__list--item">Obtain certifications in Software Engineerin</li>
+                <li class="goals__list--item">Obtain certifications in Software Engineering</li>
                 <li class="goals__list--item">Develop a personal portfolio with diverse projects.</li>
                 <li class="goals__list--item">Network with professionals and participate in tech conferences.</li>
             </ol>
