worked on image

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <p><strong>Current Day of the week:</strong> <span data-testid="currentDay"></span></p>
                 </div>
                 <div class="profile__image-box">
-                    <img src="./img/Jubreel_Adebayo_1.jpg" alt="Slack Profile Picture" data-testid="slackProfilePicture" class="profile__image">
+                    <img src="./img/Jubreel_Adebayo_1.jpg" alt="Slack Profile Picture" data-testid="slackProfilePicture" width="275" height="275" class="profile__image">
                 </div>
             </div>
         </section>
